# Uvicorn-FastAPI

./: Makefile  README.md  pyproject.toml  requirements-linting.txt  requirements.txt
src/: main.py  main_new.py
src/interface/gateway/server/: use_uvicorn.py
src/interface/gateway/web/app/: use_fastapi.py
src/interface/gateway/web/handlers/: health_router.py
src/interface/gateway/web/schemas/: response_schemas.py
tests/: base_tests.py
tests/e2e/handlers/: test_health_handler.py
tests/load/: test_health_handler.py
