[tool.poetry]
name = "uvicorn-fastapi"
version = "0.1.0"
description = "A simple FastAPI application using Uvicorn"
authors = ["Nithin <gnknithin@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    {include = "*.py", from="src"},
]
repository = "https://github.com/gnknithin/Uvicorn-FastAPI"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
uvloop = "^0.19.0"


[tool.poetry.group.linting.dependencies]
autopep8 = "^2.1.0"
mypy = "^1.9.0"
ruff = "^0.3.5"


[tool.poetry.group.testing.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"


[tool.poetry.group.load.dependencies]
locust = "^2.24.1"

[tool.pytest.ini_options]
console_output_style="classic"
filterwarnings = [
    "error",
    "ignore::UserWarning",
]
junit_duration_report = "total"
junit_family= "xunit2"
junit_logging="system-out"
junit_log_passing_tests="false"
junit_suite_name="uvicorn_fastapi__pytest_suit"
log_auto_indent="true"
log_cli="true"
log_cli_date_format="%Y-%m-%d %H:%M:%S"
log_cli_format="%(asctime)s %(levelname)s %(message)s"
log_cli_level="info"
log_date_format="%Y-%m-%d %H:%M:%S"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--disable-pytest-warnings"
]
markers = [
    "unit : mark a test as a unit test",
    "integration : mark a test as a integration test",
    "e2e: mark a test as an end-to-end test",
]
minversion = "6.0"
python_classes =[
    "Test*"
]
python_files =[
    "test_*.py"
]
python_functions =[
    "test_*"
]
pythonpath = [
    "src"
]
required_plugins =[
    "pytest-asyncio",
]
testpaths=[
    "tests"
]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
